...
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/bg_default">

    <LinearLayout
        android:id="@+id/menu_share_advanced_permissions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/minimum_size_for_touchable_area"
        android:background="?android:attr/selectableItemBackground"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/standard_padding"
...
            android:textColor="@color/text_color"
            android:textSize="@dimen/bottom_sheet_text_size" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/menu_share_send_new_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/minimum_size_for_touchable_area"
        android:background="?android:attr/selectableItemBackground"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/standard_padding"
...
            android:textColor="@color/text_color"
            android:textSize="@dimen/bottom_sheet_text_size" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/menu_share_send_link"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/minimum_size_for_touchable_area"
        android:background="?android:attr/selectableItemBackground"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/standard_padding"
...
            android:textColor="@color/text_color"
            android:textSize="@dimen/bottom_sheet_text_size" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/menu_share_unshare"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/minimum_size_for_touchable_area"
        android:background="?android:attr/selectableItemBackground"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/standard_padding"
...
            android:textColor="@color/text_color"
            android:textSize="@dimen/bottom_sheet_text_size" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/menu_share_add_another_link"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/minimum_size_for_touchable_area"
        android:background="?android:attr/selectableItemBackground"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/standard_padding"
...
