...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/favorite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/zero"
                    android:layout_marginEnd="@dimen/standard_eighth_margin"
                    android:contentDescription="@string/favorite"
                    android:src="@drawable/ic_star_outline" />
...
                    android:paddingEnd="@dimen/standard_quarter_padding"
                    android:text="@string/info_separator"
                    android:textColor="@color/list_item_lastmod_and_filesize_text"
                    android:textSize="@dimen/two_line_primary_text_size" />

                <TextView
                    android:id="@+id/last_modification_timestamp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:textSize="@dimen/two_line_primary_text_size"
                    android:textColor="@color/list_item_lastmod_and_filesize_text"
                    tools:text="@string/placeholder_media_time" />
...
